

DescToolsAddIns 1.10 (2021-06-19) ***
---------------------------------

NEW FUNCTIONS ADDED:
   * Insertfunction for %in% and |>  has been added.

UPDATED FUNCTIONS:
   * SelectVarDlg gets an interface for characters.
   
BUGFIXES:
   * 



DescToolsAddIns 1.9 (2021-03-19)
---------------------------------

NEW FUNCTIONS ADDED:
   * BookmarkDlg() displays a dialog containing the bookmarks of the
     current Word document. It provides buttons to select and delete 
     the bookmarks.
   * Cat() will output the selection with cat(..., sep="\n")  

BUGFIXES:
   * RecreateBookmarkChunk() now correctly parses the bookmark name.



DescToolsAddIns 1.8 (2020-09-10)
---------------------------------

NEW FUNCTIONS ADDED:
   * SelectBookmark() and DeleteBookmark() to select and delete bookmarks
     in a Word document have been added.

UPDATED FUNCTIONS:
   * minus operator in ModelDlg() will insert . - at the beginning of the text 
     as long as the text field is empty.
   * ModelDlg() gets a combobox for models to choose.  



DescToolsAddIns 1.7 (2020-03-08)
---------------------------------

NEW FUNCTIONS ADDED:
   * Shuffle() merges the selected lines in a random order.
   * GetExcelRangeH() imports the data from Excel using a header.

UPDATED FUNCTIONS:
   * ModelDlg() gets some brushups.
   * Selecting with Select() xy or loc will start the locator and replace the 
     selection with the coordinates. 

DEPRECATED:
   * FlipSlash() has been removed. FlipBackSlash() will now flip-flop between 
     slashes and backslashes. The option "ReplaceDoubleSlash = TRUE/FALSE" can
     be used to control the replacement to either replace double slashes by 
     simple ones or not.



DescToolsAddIns 1.6 (2020-01-10)
---------------------------------

NEW FUNCTIONS ADDED:
   * RemoveDuplicates() has been added and does what it says.
   * SortAsc() and SortDesc() sorts the selected text rowwise.
   * CreateBookmark will take the selected text and use it as name