@@ -1,8 +1,8 @@
 Package: DescToolsAddIns
 Type: Package
 Title: Interactive Functions to be Used as Shortcuts in 'RStudio'
-Version: 1.9.4
-Date: 2021-06-19
+Version: 1.9.5
+Date: 2022-01-22
 Author: Andri Signorell
 Maintainer: Andri Signorell <andri@signorell.net>
 Description: 'RStudio' as of recently offers the option to define addins and assign shortcuts to them. This package contains addins for a few most frequently used functions in a data scientist's (at least mine) daily work (like str(), example(), plot(), head(), view(), Desc()). Most of these functions will use the current selection in the editor window and send the specific command to the console while instantly executing it. Assigning shortcuts to these addins will save you quite a few keystrokes.
